Split and refine demo app